--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
-  <script src="https://code.jquery.com/jquery.min.js"></script>
-  <script type="text/javascript" src="index.js"></script>
-</head>
 
+  <link rel="stylesheet" href="main.css">
+</head>
 <body>
 
   <div class="container">
@@ -17,8 +15,7 @@
 
     <form id="js-shopping-list-form">
       <label for="shopping-list-entry">Add an item</label>
-      <input type="text" name="shopping-list-entry" id="shopping-list-entry"
-      placeholder="e.g., broccoli">
+      <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
       <button type="submit">Add item</button>
     </form>
 
@@ -69,5 +66,8 @@
       </li>
     </ul>
   </div>
+  
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 </body>
 </html>
